# viz

./: .clang-format  CMakeLists.txt  dump_viz.sh
src/: CMakeLists.txt  DataProvider.cpp  DataProvider.hpp  Renderer.cpp  Renderer.hpp  View.cpp  View.hpp  main.cpp  viz.cpp
src/resources/: resources.qrc
src/resources/shaders/: vertex.glsl
test/: cube.py  random_walk.py  spiral.py  test.py
